--- a/public/manage-01/first.html
+++ b/public/manage-01/first.html
@@ -24,8 +24,8 @@
                 <li><a href="user.html"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
                 <li>
                     <a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i><span>分类管理</span></a>
-                    <div class="children">
-                        <a href="first.html">一级分类</a>
+                    <div class="children" style="display:block">
+                        <a href="first.html" class="current">一级分类</a>
                         <a href="second.html">二级分类</a>
                     </div>
                 </li>
@@ -47,12 +47,9 @@
             <!-- 路径导航 -->
             <ol class="breadcrumb mt_20">
                 <li><a href="#">管理系统</a></li>
-                <li class="active">首页</li>
+                <li class="active">分类管理</li>
+                <li class="active">一级分类</li>
             </ol>
-            <div class="lt_content clearfix">
-                <div class="echarts-left pull-left"></div>
-                <div class="echarts-right pull-right"></div>
-            </div>
         </div>
 
     </div>
