--- a/public/manage-01/product.html
+++ b/public/manage-01/product.html
@@ -29,7 +29,7 @@
                         <a href="second.html">二级分类</a>
                     </div>
                 </li>
-                <li><a href="product.html"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
+                <li><a href="product.html" class="current"><i class="glyphicon glyphicon-tags"></i><span>商品管理</span></a></li>
             </ul>
         </div>
     </div>
@@ -47,12 +47,8 @@
             <!-- 路径导航 -->
             <ol class="breadcrumb mt_20">
                 <li><a href="#">管理系统</a></li>
-                <li class="active">首页</li>
+                <li class="active">商品管理</li>
             </ol>
-            <div class="lt_content clearfix">
-                <div class="echarts-left pull-left"></div>
-                <div class="echarts-right pull-right"></div>
-            </div>
         </div>
 
     </div>
