--- a/public/manage-01/user.html
+++ b/public/manage-01/user.html
@@ -21,7 +21,7 @@
         </div>
         <div class="nav">
             <ul>
-                <li><a href="user.html"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
+                <li><a href="user.html" class="current"><i class="glyphicon glyphicon-user"></i><span>用户管理</span></a></li>
                 <li>
                     <a href="javascript:;" class="category"><i class="glyphicon glyphicon-list"></i><span>分类管理</span></a>
                     <div class="children">
@@ -47,12 +47,8 @@
             <!-- 路径导航 -->
             <ol class="breadcrumb mt_20">
                 <li><a href="#">管理系统</a></li>
-                <li class="active">首页</li>
+                <li class="active">用户管理</li>
             </ol>
-            <div class="lt_content clearfix">
-                <div class="echarts-left pull-left"></div>
-                <div class="echarts-right pull-right"></div>
-            </div>
         </div>
 
     </div>
