--- a/public/manage-01/user.html
+++ b/public/manage-01/user.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.min.css">
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <link rel="stylesheet" href="./css/common.css">
 </head>
@@ -41,7 +42,6 @@
             <a href="#" class="menu pull-left"><i class="glyphicon glyphicon-align-justify"></i></a>
             <a href="#" class="logout pull-right"><i class="glyphicon glyphicon-log-out"></i></a>
         </div>
-
         <!-- 内容部分 -->
         <div class="container-fluid">
             <!-- 路径导航 -->
@@ -70,40 +70,80 @@
                         </tr>
                     </tbody>
                 </table>
-            </div>
-        </div>
-
-    </div>
-
-
-
-       <!-- 退出模态框 -->
-       <div class="modal fade" tabindex="-1" id="modal">
-            <div class="modal-dialog modal-sm">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" ><span >&times;</span></button>
-                        <h4 class="modal-title">温馨提示</h4>
-                    </div>
-                    <div class="modal-body">
-                        <p class="red"><i class="glyphicon glyphicon-info-sign pr_5"></i><span>您确定要退出后台管理系统吗？</span></p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                        <button type="button" class="btn btn-primary" id="logoutBtn">退出</button>
-                    </div>
+                <!-- 分页容器 -->
+                <div class="text-right">
+                    <ul id="paginator"></ul>
                 </div>
             </div>
         </div>
-          
+    </div>
 
+    <!-- 退出模态框 -->
+   <div class="modal fade" tabindex="-1" id="logoutModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" ><span >&times;</span></button>
+                    <h4 class="modal-title">温馨提示</h4>
+                </div>
+                <div class="modal-body">
+                    <p class="red"><i class="glyphicon glyphicon-info-sign pr_5"></i><span>您确定要退出后台管理系统吗？</span></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary" id="logoutBtn">退出</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 启用禁用模态框 -->
+    <div class="modal fade" tabindex="-1" id="userModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" ><span >&times;</span></button>
+                    <h4 class="modal-title">温馨提示</h4>
+                </div>
+                <div class="modal-body">
+                    <p class="red"><i class="glyphicon glyphicon-info-sign pr_5"></i><span>你确定要执行此操作吗？</span></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-primary" id="determineBtn">确认</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 模板 -->
+    <script type="text/html" id="usertmp">
+            {{ each rows v i }}
+            <tr>
+                <td>{{ i + 1 + (page - 1) * size }}</td>
+                <td>{{ v.username }}</td>
+                <td>{{ v.mobile }}</td>
+                <td>{{ v.isDelete === 1 ? "正常" : "禁用"}}</td>
+                <td data-id="{{ v.id }}">
+                    {{ if v.isDelete === 1 }}
+                        <button class="btn btn-danger">禁用</button>
+                    {{ else }}
+                        <button class="btn btn-success">启用</button>
+                    {{ /if }}
+                </td>
+                
+            </tr>
+            {{ /each }}
+    </script>
 
     <script src="./lib/jquery/jquery.min.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
+    <script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
     <script src="./lib/nprogress/nprogress.js"></script>
-    <script src="./lib/echarts/echarts.min.js"></script>
+    <script src="./lib/artTemplate/template-web.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/isLogin.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/user.js"></script>
 </body>
 </html>
