--- a/public/manage-01/first.html
+++ b/public/manage-01/first.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <link rel="stylesheet" href="./css/common.css">
 </head>
@@ -50,6 +51,29 @@
                 <li class="active">分类管理</li>
                 <li class="active">一级分类</li>
             </ol>
+            <!-- 添加按钮 -->
+            <button class="btn btn-default" id="addCategory">添加分类</button>
+
+            <!-- 表格 -->
+            <table class="table table-bordered table-hover mt_20">
+                <thead>
+                    <tr>
+                        <th width="20%">序号</th>
+                        <th width="80%">一级分类名</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>户外馆</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <!-- 分页 -->
+            <div class="text-right">
+                <ul id="paginator"></ul>
+            </div>
         </div>
 
     </div>
@@ -72,15 +96,49 @@
             </div>
         </div>
     </div>
+
+    <!-- 增加分类模态框 -->
+    <div class="modal fade" tabindex="-1" id="firstModal">
+            <div class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" ><span >&times;</span></button>
+                        <h4 class="modal-title">添加分类</h4>
+                    </div>
+                    <div class="modal-body">
+                        <form id="addForm">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="请输入一级分类" name="categoryName">
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                        <button type="submit" class="btn btn-primary" form="addForm">添加</button>
+                    </div>
+                </div>
+            </div>
+    </div>    
           
 
+    <!-- 模板 -->
+    <script type="text/html" id="firsttmp">
+        {{ each rows v i }}
+            <tr>
+                <td>{{ i + 1 + (page - 1) * size }}</td>
+                <td>{{ v.categoryName }}</td>
+            </tr>
+        {{ /each }}
+    </script>
 
     <script src="./lib/jquery/jquery.min.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
     <script src="./lib/nprogress/nprogress.js"></script>
-    <script src="./lib/echarts/echarts.min.js"></script>
+    <script src="./lib/artTemplate/template-web.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/isLogin.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/first.js"></script>
 </body>
 </html>
