--- a/public/manage-01/second.html
+++ b/public/manage-01/second.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="./lib/bootstrap-validator/css/bootstrapValidator.css">
     <link rel="stylesheet" href="./lib/nprogress/nprogress.css">
     <link rel="stylesheet" href="./css/common.css">
 </head>
@@ -50,6 +51,34 @@
                 <li class="active">分类管理</li>
                 <li class="active">二级分类</li>
             </ol>
+
+            <!-- 添加按钮 -->
+            <button class="btn btn-default" id="addCategory">添加分类</button>
+
+            <!-- 表格 -->
+            <table class="table table-bordered table-hover mt_20">
+                <thead>
+                    <tr>
+                        <th>序号</th>
+                        <th>一级分类名称</th>
+                        <th>二级分类名称</th>
+                        <th>二级分类LOGO</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>1</td>
+                        <td>女士馆</td>
+                        <td>阿萨德</td>
+                        <td><img src="./images/none.png" alt="" height="50"></td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <!-- 分页 -->
+            <div class="text-right">
+                <ul id="paginator"></ul>
+            </div>
         </div>
 
     </div>
@@ -72,15 +101,85 @@
             </div>
         </div>
     </div>
+
+    <!-- 添加分类模态框 -->
+    <div class="modal fade" tabindex="-1" id="addModal">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" ><span >&times;</span></button>
+                    <h4 class="modal-title">添加分类</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="form">
+                        <div class="form-group">
+                            <div class="dropdown">
+                                <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+                                    <span class="dropdowntxt">请选择一级分类</span>
+                                    <span class="caret"></span>
+                                </button>
+                                <ul class="dropdown-menu" >
+                                    <li><a href="#">Action</a></li>
+                                </ul>
+                            </div>
+                            <input type="hidden" name="categoryId">
+                            <input type="hidden" name="hot" value="1">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="请输入二级分类" name="brandName">
+                        </div>
+                        <div class="form-group">
+                            <label for="fileupload" class="btn btn-default">上传图片</label>
+                            <input type="file" style="display:none" id="fileupload" name="pic1" data-url="/category/addSecondCategoryPic">
+                        </div>
+                        <div class="form-group" id="imgbox">
+                            <img width="100" src="./images/none.png" alt="">
+                            <input type="hidden" name="brandLogo">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+                    <button type="submit" class="btn btn-primary" form="form">添加</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- 表格模板 -->
+    <script type="text/html" id="sectmp">
+        {{ each rows v i}}
+            <tr>
+                <td>{{ i + 1 + (page - 1) * size}}</td>
+                <td>{{ v.categoryName }}</td>
+                <td>{{ v.brandName }}</td>
+                <td><img src="{{ v.brandLogo }}" alt="" height="50"></td>
+            </tr>
+        {{ /each }}
+    </script>
+
+
+    <!-- 下拉菜单模板 -->
+    <script type="text/html" id="dropdowntmp">
+        {{ each rows v i}}
+            <li data-id="{{ v.id }}"><a href="#">{{ v.categoryName }}</a></li>
+        {{ /each }}
+    </script>
           
 
 
     <script src="./lib/jquery/jquery.min.js"></script>
+    <script src="./lib/jquery-fileupload/jquery.ui.widget.js"></script>
+    <script src="./lib/jquery-fileupload/jquery.fileupload.js"></script>
     <script src="./lib/bootstrap/js/bootstrap.min.js"></script>
+    <script src="./lib/bootstrap-paginator/bootstrap-paginator.min.js"></script>
+    <script src="./lib/bootstrap-validator/js/bootstrapValidator.min.js"></script>
     <script src="./lib/nprogress/nprogress.js"></script>
     <script src="./lib/echarts/echarts.min.js"></script>
+    <script src="./lib/artTemplate/template-web.js"></script>
     <script src="./js/common.js"></script>
     <script src="./js/isLogin.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/second.js"></script>
 </body>
 </html>
